--- a/boris-build/boris-build.cabal
+++ b/boris-build/boris-build.cabal
@@ -18,7 +18,6 @@ library
                     , ambiata-p
                     , ambiata-tine
                     , ambiata-twine
-                    , ambiata-x-eithert
                     , async                           >= 2.0        && < 2.2
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
@@ -28,7 +27,7 @@ library
                     , process                         >= 1.2        && < 1.7
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6
-
+                    , transformers-either
   ghc-options:
                     -Wall
 
@@ -84,7 +83,6 @@ test-suite test-io
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-tine
-                    , ambiata-x-eithert
                     , conduit                         == 1.2.*
                     , conduit-extra                   == 1.1.*
                     , directory                       == 1.2.*
@@ -93,5 +91,6 @@ test-suite test-io
                     , text
                     , temporary
                     , transformers
+                    , transformers-either
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
